Updated server config for database connection

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
 ADMIN_WHATSAPP_NUMBER=whatsapp:+918409706023
 
 # MySQL Database Configuration
-DB_HOST=localhost                 # or your database server IP
-DB_NAME=campus_maintenance       # database name
+DB_HOST=mysql.railway.internal               # or your database server IP
+DB_NAME=railway     # database name
 DB_USER=root                     # or your database username
-DB_PASSWORD=root@123     # your database password
+DB_PASSWORD=pQpchUENaCITsZpkTmPcZFvOvlmLDSSr    # your database password
