--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install"
   },
   "author": "",
@@ -12,9 +13,13 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.0"
-  }
+  },
+
+  "engines": {
+  "node": "18.x" 
+}
 }
